--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -777,9 +777,16 @@ Lastly, figure~\ref{fig:maxtime} illustrates the time needed to spread the messa
 \textcolor{red}{Maybe write about further work... What can be improved or looked onto...}
 
 \section{Conclusion}
+We have introduced the topics of Internet of things and sensor networks. The opportunities resulting by virtualization of those sensor networks have been elaborated. A distributed algorithm to spread data accross a mesh-network has been implemented. We proposed several performance measures to evaluate this algorithm.
 
+Our results show ...
 
 \section{Further work}
+In further work, various alterations to the gossip protocol can be covered and examined.
+
+
+Due to time limitations we could not address the huge spectrum of possible analysis. Further work is needed to examine the effects when the wired links between nodes are replaced by wireless ones. Power limitations and mobility of the nodes should be included in such a scenario. Thus, the list of neighbors for each node changes over time and a topology file is not needed anymore. In the wireless case, Wi-Fi Direct can be used to connect devices with each other.
+
 % Maybe the hop-update extension?
 % #links vs #nodes...
 
