--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -681,26 +681,28 @@ The pseudo code of gossip algorithm is given in figure~\ref{fig:pseudo}.
 switch(state):
   case running:
     if message is not null:
-      in every 1 millisecond:
+      every 5 milliseconds:
         find a random neighbor R
         send data packet to R
-        if receive a packet:
-          if pakcet is ACK:
-            state <- stop
+      if receive a packet:
+        if packet is ACK:
+          state <- stop
+        if packet is data:
+          send ACK to packet source
     else:
       if receive a packet:
         if packet is a data packet:
-          update the message data
-          in every 5 second:
-            find a random neighbor R
-            send a request packet to R
-            if receive a packet:
-              if packet is a data packet:
-                update the message to data
+          update the message
+      every 5 seconds:
+        find a random neighbor R
+        send a request packet to R
+        if receive a packet:
+          if packet is a data packet:
+            update the message to data
                     
   case stop:
     if receive a packet:
-      if pakcet is request:
+      if packet is request:
         send data to the source node
       if packet is data:
         send ACK to the source node
