[minor] Uncomment line

--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -806,7 +806,7 @@ We would like to thank Dr. Bechir Hamdaoui for his advising. We also would like 
 % (used to reserve space for the reference number labels box)
 
 \bibliography{mybib}{}
-%\bibliographystyle{ieeetr}
+\bibliographystyle{ieeetr}
 
 \end{document}
 
